--- a/webinside/webinsideinside/index.html
+++ b/webinside/webinsideinside/index.html
@@ -35,7 +35,7 @@
         <li><a href="../../upperupper.html">ссылка на страницу в каталоге двумя уровнями выше текущей</a></li>
 
         <li><p> контекстная ссылка: <br>
-            <a href="https://kubsu.ru/ru/fktipm">ФКТиПМ</a> 
+            <a href="https://kubsu.ru/ru/fktipm">ФКТиПМ</a> занял первое место по успеваемости в КубГУ 
         </p></li>
         <li><a href="https://kubsu.ru/ru/fktipm#field-faculty-education-extra">ссылка на фрагмент страницы стороннего сайта</a></li>
         <li>
@@ -92,7 +92,7 @@
         </label>
         
         <label><input type="checkbox">С контрактом ознакомлен(-а)</label><br>
-        <input type="submit" value="Сохранить">
+        <input type="submit" value="save">
     </form>
 </body>
 </html>
