--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         <li><a href="about/about.html">относительная ссылка на страницу в каталоге about</a></li>
 
-        <li><a href="../upper.html">ссылка на страницу в каталоге уровня выше текущей</a></li>
+        <li><a href="webinside/upper.html">ссылка на страницу в каталоге уровня выше текущей</a></li>
 
-        <li><a href="../../upperupper.html">ссылка на страницу в каталоге двумя уровнями выше текущей</a></li>
+        <li><a href="webinside/webinsideinside/upperupper.html">ссылка на страницу в каталоге двумя уровнями выше текущей</a></li>
 
         <li><p> контекстная ссылка: <br>
-            <a href="https://kubsu.ru/ru/fktipm">ФКТиПМ</a> занял первое место по успеваемости в КубГУ 
+            <a href="https://kubsu.ru/ru/fktipm">ФКТиПМ</a> стал первым факультетом по успеваемости в КубГУ 
         </p></li>
         <li><a href="https://kubsu.ru/ru/fktipm#field-faculty-education-extra">ссылка на фрагмент страницы стороннего сайта</a></li>
         <li>
@@ -70,7 +70,7 @@
 
         <label>
             Любимый язык программирования: 
-            <select name="prog-lang" id="prog-lang">
+            <select name="choose" id="choose">
                 <option value="">JavaScript</option>
                 <option value="">PHP</option>
                 <option value="">Python</option>
